[gd_scene load_steps=47 format=3 uid="uid://d0bpshyhqttxe"]

[ext_resource type="Script" path="res://scripts/Player_cat.gd" id="1_xul5c"]
[ext_resource type="Texture2D" uid="uid://duaqmukigu7q5" path="res://icons/cat_body.png" id="2_i0i5y"]
[ext_resource type="Texture2D" uid="uid://ch8wnnfmco5bf" path="res://icons/cat_head.png" id="3_8i6yf"]
[ext_resource type="Script" path="res://scenes/Cat_camera.gd" id="3_cpxto"]
[ext_resource type="AudioStream" uid="uid://ycypwlqyiarp" path="res://sounds/pickupitem.mp3" id="8_e6c31"]
[ext_resource type="AudioStream" uid="uid://c5cmjngfudjsq" path="res://sounds/PolDamage.mp3" id="9_04d81"]
[ext_resource type="Texture2D" uid="uid://b2v5qv0xb7rax" path="res://icons/quality_tap.png" id="9_kown4"]
[ext_resource type="Script" path="res://scenes/RayCast.gd" id="11_lvl7f"]
[ext_resource type="Script" path="res://scenes/Animation_cringe.gd" id="11_nxobl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr7ty"]
size = Vector2(8, 11)

[sub_resource type="Animation" id="Animation_jrcud"]
resource_name = "Check_point"
length = 0.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [38, 39, 40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_uqpan"]
resource_name = "DIE"
length = 0.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34]
}

[sub_resource type="Animation" id="Animation_8yx7y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mpsr0"]
resource_name = "fail_int"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [28, 29]
}

[sub_resource type="Animation" id="Animation_63eb6"]
resource_name = "fall"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [35, 36, 37]
}

[sub_resource type="Animation" id="Animation_d23tv"]
resource_name = "idle"
length = 0.50001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_s4sxh"]
resource_name = "jump"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_mwarb"]
resource_name = "one_jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_pdpnh"]
resource_name = "redeem"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [34, 33, 32, 31, 30]
}

[sub_resource type="Animation" id="Animation_h0vh2"]
resource_name = "stair_idle"
length = 0.50001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_v5trf"]
resource_name = "three jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_1ec4t"]
resource_name = "two_jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_oqs82"]
resource_name = "walk"
length = 0.70001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ieql4"]
resource_name = "walk_stair"
length = 0.50001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qr63l"]
_data = {
"Check_point": SubResource("Animation_jrcud"),
"DIE": SubResource("Animation_uqpan"),
"RESET": SubResource("Animation_8yx7y"),
"fail_int": SubResource("Animation_mpsr0"),
"fall": SubResource("Animation_63eb6"),
"idle": SubResource("Animation_d23tv"),
"jump": SubResource("Animation_s4sxh"),
"one_jojoPOS": SubResource("Animation_mwarb"),
"redeem": SubResource("Animation_pdpnh"),
"stair_idle": SubResource("Animation_h0vh2"),
"three jojoPOS": SubResource("Animation_v5trf"),
"two_jojoPOS": SubResource("Animation_1ec4t"),
"walk": SubResource("Animation_oqs82"),
"walk_stair": SubResource("Animation_ieql4")
}

[sub_resource type="Animation" id="Animation_e4al6"]
resource_name = "Check_point"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_gsffb"]
resource_name = "DIE"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 35, 35]
}

[sub_resource type="Animation" id="Animation_5ds56"]
resource_name = "Idle"
length = 2.00001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_ag4xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s1j5t"]
resource_name = "fail_int"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [24, 25]
}

[sub_resource type="Animation" id="Animation_y4ebm"]
resource_name = "fall"
length = 3.0001
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [29, 30, 31]
}

[sub_resource type="Animation" id="Animation_tmiwl"]
resource_name = "jump"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_5a6al"]
resource_name = "one_jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_23kjk"]
resource_name = "redeem"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 28, 28, 27, 26]
}

[sub_resource type="Animation" id="Animation_y4imj"]
resource_name = "stair_idle"
length = 0.10001

[sub_resource type="Animation" id="Animation_p2jyv"]
resource_name = "three jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_pcnlp"]
resource_name = "two_jojoPOS"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_ksb85"]
resource_name = "walk"
length = 0.10001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_odq0h"]
resource_name = "walk_stair"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation_cringe/sprite_head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5gvco"]
_data = {
"Check_point": SubResource("Animation_e4al6"),
"DIE": SubResource("Animation_gsffb"),
"Idle": SubResource("Animation_5ds56"),
"RESET": SubResource("Animation_ag4xv"),
"fail_int": SubResource("Animation_s1j5t"),
"fall": SubResource("Animation_y4ebm"),
"jump": SubResource("Animation_tmiwl"),
"one_jojoPOS": SubResource("Animation_5a6al"),
"redeem": SubResource("Animation_23kjk"),
"stair_idle": SubResource("Animation_y4imj"),
"three jojoPOS": SubResource("Animation_p2jyv"),
"two_jojoPOS": SubResource("Animation_pcnlp"),
"walk": SubResource("Animation_ksb85"),
"walk_stair": SubResource("Animation_odq0h")
}

[sub_resource type="Animation" id="Animation_ea1to"]
resource_name = "bad"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_wxqdx"]
resource_name = "fail"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fwmox"]
resource_name = "good"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_x8cpe"]
resource_name = "new_animation"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ohjer"]
resource_name = "perfect"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wcvr"]
_data = {
"bad": SubResource("Animation_ea1to"),
"fail": SubResource("Animation_wxqdx"),
"good": SubResource("Animation_fwmox"),
"new_animation": SubResource("Animation_x8cpe"),
"perfect": SubResource("Animation_ohjer")
}

[node name="Player_cat" type="CharacterBody2D"]
process_priority = 1
position = Vector2(-1, -8)
collision_mask = 7
script = ExtResource("1_xul5c")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_pr7ty")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(7, 7)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
script = ExtResource("3_cpxto")

[node name="Timer" type="Timer" parent="Camera2D"]
wait_time = 0.05
one_shot = true

[node name="Time_to_next_damage" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="Time_to_redeem" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PRe_redeem" type="Timer" parent="."]
wait_time = 0.61
one_shot = true

[node name="Time_to_stop_fail_int" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="interaction_luck" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e6c31")

[node name="interaction_fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_04d81")

[node name="Proverka_stuck_li" type="Timer" parent="."]
wait_time = 1.68
one_shot = true

[node name="RayCast" type="Node2D" parent="."]
script = ExtResource("11_lvl7f")

[node name="RayCast2D2" type="RayCast2D" parent="RayCast"]
position = Vector2(-4, -0.8)
target_position = Vector2(0, 9)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D" type="RayCast2D" parent="RayCast"]
position = Vector2(4, -0.8)
target_position = Vector2(0, 9)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Animation_cringe" type="Node2D" parent="."]
script = ExtResource("11_nxobl")

[node name="Animation_body" type="AnimationPlayer" parent="Animation_cringe"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_qr63l")
}

[node name="Animation_head" type="AnimationPlayer" parent="Animation_cringe"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5gvco")
}

[node name="sprite_body" type="Sprite2D" parent="Animation_cringe"]
position = Vector2(0, 2.6)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_i0i5y")
hframes = 7
vframes = 7
metadata/_edit_group_ = true

[node name="sprite_head" type="Sprite2D" parent="Animation_cringe"]
position = Vector2(0, 2.75)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_8i6yf")
hframes = 6
vframes = 6
metadata/_edit_group_ = true

[node name="Time_to_stop_pos" type="Timer" parent="Animation_cringe"]
wait_time = 0.5
one_shot = true

[node name="Time_to_stop_fail_animate" type="Timer" parent="Animation_cringe"]
wait_time = 0.3
one_shot = true

[node name="Time_to_die_anima" type="Timer" parent="Animation_cringe"]
wait_time = 0.1
one_shot = true

[node name="time_to_redeem" type="Timer" parent="Animation_cringe"]
wait_time = 0.6
one_shot = true

[node name="Time_stage_checkpoint" type="Timer" parent="Animation_cringe"]
wait_time = 0.6
one_shot = true

[node name="quality_tap" type="Node2D" parent="."]

[node name="quality_text" type="Sprite2D" parent="quality_tap"]
position = Vector2(-6, -3)
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_kown4")
hframes = 2
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="quality_tap/quality_text"]
libraries = {
"": SubResource("AnimationLibrary_3wcvr")
}
speed_scale = 2.0

[node name="time_to_quefree_quality" type="Timer" parent="quality_tap"]
wait_time = 0.4
one_shot = true

[connection signal="Flip_h" from="." to="Animation_cringe" method="_on_player_cat_flip_h"]
[connection signal="Flip_h__" from="." to="Animation_cringe" method="_on_player_cat_flip_h__"]
[connection signal="Idle" from="." to="Animation_cringe" method="_on_player_cat_idle"]
[connection signal="Rotate_left" from="." to="Animation_cringe" method="_on_player_cat_rotate_left"]
[connection signal="Rotate_normal" from="." to="Animation_cringe" method="_on_player_cat_rotate_normal"]
[connection signal="Rotate_right" from="." to="Animation_cringe" method="_on_player_cat_rotate_right"]
[connection signal="Run" from="." to="Animation_cringe" method="_on_player_cat_run"]
[connection signal="Update_anim" from="." to="Animation_cringe" method="_on_player_cat_update_anim"]
[connection signal="camera_back" from="." to="Camera2D" method="_on_player_cat_camera_back"]
[connection signal="camera_back" from="." to="Animation_cringe" method="_on_player_cat_camera_back"]
[connection signal="camera_ded" from="." to="Camera2D" method="_on_player_cat_camera_ded"]
[connection signal="camera_ded" from="." to="Animation_cringe" method="_on_player_cat_camera_ded"]
[connection signal="fail" from="." to="Camera2D" method="_on_player_cat_fail"]
[connection signal="fail" from="." to="Animation_cringe" method="_on_player_cat_fail"]
[connection signal="jump_anim" from="." to="Animation_cringe" method="_on_player_cat_jump_anim"]
[connection signal="jump_anim_off" from="." to="Animation_cringe" method="_on_player_cat_jump_anim_off"]
[connection signal="jump_move_anim" from="." to="Animation_cringe" method="_on_player_cat_jump_move_anim"]
[connection signal="luck" from="." to="Camera2D" method="_on_player_cat_luck"]
[connection signal="luck" from="." to="Animation_cringe" method="_on_player_cat_luck"]
[connection signal="new_checkpoint" from="." to="Animation_cringe" method="_on_player_cat_new_checkpoint"]
[connection signal="not_idle" from="." to="Animation_cringe" method="_on_player_cat_not_idle"]
[connection signal="not_run" from="." to="Animation_cringe" method="_on_player_cat_not_run"]
[connection signal="not_stair_ed" from="." to="Animation_cringe" method="_on_player_cat_not_stair_ed"]
[connection signal="stair_ed" from="." to="Animation_cringe" method="_on_player_cat_stair_ed"]
[connection signal="tact" from="." to="Camera2D" method="_on_player_cat_tact"]
[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="timeout" from="Time_to_next_damage" to="." method="_on_time_to_next_damage_timeout"]
[connection signal="timeout" from="Time_to_redeem" to="." method="_on_time_to_redeem_timeout"]
[connection signal="timeout" from="PRe_redeem" to="." method="_on_p_re_redeem_timeout"]
[connection signal="timeout" from="Time_to_stop_fail_int" to="." method="_on_time_to_stop_fail_int_timeout"]
[connection signal="timeout" from="Proverka_stuck_li" to="." method="_on_proverka_stuck_li_timeout"]
[connection signal="one_f" from="RayCast" to="." method="_on_ray_cast_one_f"]
[connection signal="one_n" from="RayCast" to="." method="_on_ray_cast_one_n"]
[connection signal="two_f" from="RayCast" to="." method="_on_ray_cast_two_f"]
[connection signal="two_n" from="RayCast" to="." method="_on_ray_cast_two_n"]
[connection signal="timeout" from="Animation_cringe/Time_to_stop_pos" to="Animation_cringe" method="_on_time_to_stop_pos_timeout"]
[connection signal="timeout" from="Animation_cringe/Time_to_stop_fail_animate" to="Animation_cringe" method="_on_time_to_stop_fail_animate_timeout"]
[connection signal="timeout" from="Animation_cringe/Time_to_die_anima" to="Animation_cringe" method="_on_time_to_die_anima_timeout"]
[connection signal="timeout" from="Animation_cringe/time_to_redeem" to="Animation_cringe" method="_on_time_to_redeem_timeout"]
[connection signal="timeout" from="Animation_cringe/Time_stage_checkpoint" to="Animation_cringe" method="_on_time_stage_checkpoint_timeout"]
[connection signal="timeout" from="quality_tap/time_to_quefree_quality" to="." method="_on_time_to_quefree_quality_timeout"]
